--- a/app/assets/javascripts/edit.js.erb
+++ b/app/assets/javascripts/edit.js.erb
@@ -1,2 +1,2 @@
-$('#task-form').html("<%= j (render 'form') %>");
-$('#task-form').slideDown(350);
+$('#todo-form').html("<%= j (render 'form') %>");
+$('#todo-form').slideDown(350);
