--- a/app/assets/javascripts/update.js.erb
+++ b/app/assets/javascripts/update.js.erb
@@ -1,2 +1,2 @@
-$('#tasks').html("<%= j (render @tasks) %>");
-$('#task-form').slideUp(350);
+$('#todos').html("<%= j (render @todos) %>");
+$('#todo-form').slideUp(350);
